add remebering of previous query into application state

--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,9 @@
 body {font-size: 13px;}
+
+tr.clickable:hover {
+  color: blue;
+  cursor: pointer;
+}
 .ds-none {display: none !important;}
 
 .navbar {margin-bottom: 10px; min-height: 40px;}
