Add notifications function

--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,45 @@
 body {font-size: 15px;}
 
+.notifications {
+  position: fixed;
+  width: 30%;
+  z-index: 9999;
+}
+
+.notifications.top-right {
+  right: 10px;
+  top: 25px;
+}
+
+.notifications.top-left {
+  left: 10px;
+  top: 25px;
+}
+
+.notifications.bottom-left {
+  left: 10px;
+  bottom: 25px;
+}
+
+.notifications.bottom-right {
+  right: 10px;
+  bottom: 25px;
+}
+
+/* Notification Element */
+.notifications > div {
+  position: relative;
+  margin: 5px 0px;
+}
+
+.flashMessage > h5 {
+  text-transform: uppercase;
+}
+
+.flashMessage {
+  cursor: pointer;
+}
+
 .panel-heading h3 {
     white-space: nowrap;
     overflow: hidden;
