--- a/css/app.css
+++ b/css/app.css
@@ -45,9 +45,13 @@ body {font-size: 15px;}
     overflow: hidden;
     text-overflow: ellipsis;
     line-height: normal;
-    width: 75%;
+    width: 50%;
     padding-top: 8px;
 }
+
+.col-md-worel {position: inherit;}
+
+.panel-heading .btn {margin-left: 15px;}
 
 tr.clickable:hover {
   color: blue;
@@ -72,3 +76,41 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
+.delete-confirm {
+  position: absolute;
+  display: none;
+  left: 0;
+  top: 0;
+  color: #000;
+  padding: 10px;
+  text-align: center;
+  max-width: 320px;
+  width: 100%;
+  background: #fff;
+  border: 2px solid #ccc;
+  border-radius: 6px;
+  box-shadow: 0 5px 10px #ccc;
+}
+.delete-confirm:after, .delete-confirm:before {
+  top: 100%;
+  left: 50%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+}
+.delete-confirm:after {
+  border-color: rgba(255, 255, 255, 0);
+  border-top-color: #fff;
+  border-width: 18px;
+  margin-left: -18px;
+}
+.delete-confirm:before {
+  border-color: rgba(153, 153, 153, 0);
+  border-top-color: #999;
+  border-width: 21px;
+  margin-left: -21px;
+}
+.delete-confirm .btn {margin: 0 5px;}
