Mark closed issue with strike through decoration

--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,9 @@
 body {font-size: 15px;}
 
+.issue-closed a {
+  text-decoration: line-through;
+}
+
 .notifications {
   position: fixed;
   width: 30%;
