Fix glyphicon defaut color

--- a/css/app.css
+++ b/css/app.css
@@ -1,15 +1,15 @@
 body {font-size: 15px;}
 
 /*  glyph icon check boxes */
-.glyphicon:before {
+input[type=checkbox].glyphicon:before {
   visibility: visible;
   color: #ccc;
 }
-.glyphicon.glyphicon-user:checked:before {
+input[type=checkbox].glyphicon.glyphicon-user:checked:before {
   color: #444;
 }
 
-input[type=checkbox].glyphicon{
+input[type=checkbox].glyphicon {
     visibility: hidden;
 }
 
