--- a/css/app.css
+++ b/css/app.css
@@ -137,3 +137,5 @@ input[type=number] {
   margin-left: -21px;
 }
 .delete-confirm .btn {margin: 0 5px;}
+
+.form-control.err {border: 1px solid red; box-shadow: 0 0 8px rgba(255,0,0,0.6);}
