--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,91 @@
-body {font-size: 15px;}
+body {
+  font-size: 15px;
+}
 
+#protocol p.signature-place {
+  margin-top: 5em;
+}
+
+#protocol p.signature-name {
+  margin-top: 5em;
+}
+
+#protocol td span.connection-detail {
+  font-size: 110%;
+  font-weight: bold;
+}
+
+#protocol table.device tr td.device-name {
+  border: 1px solid black;
+  padding-left: 5px;
+}
+
+#protocol table.service-detail tr td.device-name {
+  border: 1px solid black;
+  padding-left: 5px;
+}
+
+#protocol table.device tr td.device-owner {
+  text-align: center;
+  margin: 0 10px 0 10px;
+}
+
+#protocol table.device tr td.devices-label {
+  color: white;
+}
+
+#protocol table.device tr:first-child td.devices-label {
+  color: black;
+}
+
+#protocol {
+  font-family: "Times New Roman", Times, serif;
+  font-size: 9.5pt;
+  line-height: 160%;
+}
+
+#protocol img.pl.logo {
+  width: 120px;
+}
+
+#protocol h1 {
+  font-size: 130%;
+  font-weight: bold;
+  text-align: center;
+}
+
+#protocol table {
+  width: 100%;
+}
+
+#protocol td.col-1 {
+  width: 3%;
+  font-weight: bold;
+  vertical-align: top;
+}
+
+#protocol td.col-2 {
+  width: 27%;
+}
+
+#protocol td.col-3 {
+  width: 70%;
+}
+
+#protocol table.main-protocol {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+#protocol td.bordered {
+  border: 1px solid black;
+  padding-left: 0.5em;
+}
+
+#protocol span.dotted-field {
+  display: inline-block;
+  width: 25%;
+  border-bottom: 1px dotted black;
+}
 .issue-closed a {
   text-decoration: line-through;
 }
