Fix protocol logo url

--- a/hbs/protocol.hbs
+++ b/hbs/protocol.hbs
@@ -1,6 +1,6 @@
 {{#if isPlService}}
 <div id="protocol" class="container">
-  <img class="pl logo" src="../img/silesnet_logo.svg">
+  <img class="pl logo" src="img/silesnet_logo.svg">
   <h1>DODATEK NR .... DO UMOWY NR {{agreementNo}}</h1>
   <table>
     <tr>
