Fix devices presentation when empty list

--- a/hbs/protocol.hbs
+++ b/hbs/protocol.hbs
@@ -102,8 +102,11 @@
         podpisem.
       </td>
     </tr>
+
     {{!-- empty row --}}
     <tr><td class="col-1">&nbsp;</td><td class="col-2"></td><td class="col-3"></td></tr>
+
+    {{#if devices}}
     <tr>
       <td with="3%">&nbsp;</td>
       <td width="97%" colspan="2">
@@ -155,7 +158,8 @@
       <td with="3%">&nbsp;</td>
       <td width="100%" colspan="3">&nbsp;</td>
     </tr>
-
+    {{/if}}
+    
     <tr>
       <td with="3%">&nbsp;</td>
       <td width="97%" colspan="2">
