Fix address presentation for service protocol

--- a/hbs/protocol.hbs
+++ b/hbs/protocol.hbs
@@ -86,8 +86,8 @@
       <td class="col-1">3.</td>
       <td colspan="2" class="col-3">
         Dostawca zawarł z użytkownikiem dnia <span class="dotted-field">&nbsp;</span>
-        umowę nr <span class="dotted-field">&nbsp;</span><br />
-        o udostępnieniu stałego łącza do sieci internet.
+        umowę nr <span class="dotted-field">&nbsp;</span>
+        o&nbsp;udostępnieniu stałego łącza do sieci internet.
       </td>
     </tr>
 
