Fix PL protocol access details resolution

--- a/hbs/protocol.hbs
+++ b/hbs/protocol.hbs
@@ -204,37 +204,39 @@
       <td with="3%">&nbsp;</td>
       <td width="100%" colspan="3">&nbsp;</td>
     </tr>
-    <tr>
-      <td colspan="3"><span class="connection-detail">TECHNICZNA CHARAKTERYSTYKA PODŁĄCZENIA</span></td>
-    </tr>
-    <tr>
-      <td width="50%" colspan="3">
-        <table style="margin-top: 10px">
-        {{#if hasPppoe}}
-          <tr>
-            <td width="20%"><b>Tryb PPPoE:</b></td>
-            <td width="40%"><span class="glyphicon glyphicon-check"></span></td>
-            <td width="40%">&nbsp;</td>
-          </tr>
-          <tr>
-            <td>Nazwa użytkownika:</td>
-            <td style="border: 1px solid black; padding-left: 5px">{{model.pppoe.login}}</td>
-          </tr>
-          <tr>
-            <td>Hasło:</td>
-            <td style="border: 1px solid black; padding-left: 5px">{{model.pppoe.password}}</td>
-          </tr>
-        {{/if}}
-        {{#if hasDhcp}}
-          <tr>
-            <td width="20%"><b>Tryb DHCP:</b></td>
-            <td width="40%"><span class="glyphicon glyphicon-check"></span></td>
-            <td width="40%">&nbsp;</td>
-          </tr>
-        {{/if}}
-        </table>
-      </td>
-    </tr>
+    {{#if hasAccessDetails}}
+      <tr>
+        <td colspan="3"><span class="connection-detail">TECHNICZNA CHARAKTERYSTYKA PODŁĄCZENIA</span></td>
+      </tr>
+      <tr>
+        <td width="50%" colspan="3">
+          <table style="margin-top: 10px">
+          {{#if hasPppoe}}
+            <tr>
+              <td width="20%"><b>Tryb PPPoE:</b></td>
+              <td width="40%"><span class="glyphicon glyphicon-check"></span></td>
+              <td width="40%">&nbsp;</td>
+            </tr>
+            <tr>
+              <td>Nazwa użytkownika:</td>
+              <td style="border: 1px solid black; padding-left: 5px">{{model.pppoe.login}}</td>
+            </tr>
+            <tr>
+              <td>Hasło:</td>
+              <td style="border: 1px solid black; padding-left: 5px">{{model.pppoe.password}}</td>
+            </tr>
+          {{/if}}
+          {{#if hasDhcp}}
+            <tr>
+              <td width="20%"><b>Tryb DHCP:</b></td>
+              <td width="40%"><span class="glyphicon glyphicon-check"></span></td>
+              <td width="40%">&nbsp;</td>
+            </tr>
+          {{/if}}
+          </table>
+        </td>
+      </tr>
+    {{/if}}
   </table>
   <p class="signature-place">W <span class="dotted-field">&nbsp;</span> dnia <span class="dotted-field">&nbsp;</span></p>
   <p class="signature-name">Użytkownik: <span class="dotted-field">&nbsp;</span> Dostawca: <span class="dotted-field">&nbsp;</span></p>
