--- a/css/app.css
+++ b/css/app.css
@@ -2,6 +2,10 @@ body {
   font-size: 15px;
 }
 
+.serviceInfo {
+  white-space: pre;
+}
+
 .todo .comments {
   margin-top: 0.5em;
   margin-bottom: 1em;
