--- a/hbs/protocol.hbs
+++ b/hbs/protocol.hbs
@@ -1,5 +1,5 @@
-{{#if isPlService}}
 <div id="protocol" class="container">
+{{#if isPlService}}
   <img class="pl logo" src="img/silesnet_logo.svg">
   <h1>DODATEK NR .... DO UMOWY NR {{agreementNo}}</h1>
   <table>
@@ -240,8 +240,8 @@
   </table>
   <p class="signature-place">W <span class="dotted-field">&nbsp;</span> dnia <span class="dotted-field">&nbsp;</span></p>
   <p class="signature-name">Użytkownik: <span class="dotted-field">&nbsp;</span> Dostawca: <span class="dotted-field">&nbsp;</span></p>
-</div>
 {{else}}
 
-  {{!-- TODO --}}
+  {{!-- TODO CZ version --}}
 {{/if}}
+</div>
