Update protocol with head name and GDPR details

--- a/hbs/protocol.hbs
+++ b/hbs/protocol.hbs
@@ -22,7 +22,7 @@
     </tr>
     <tr>
       <td class="col-1"></td><td class="col-2">Reprezentowany przez:</td>
-      <td class="col-3">mgr Iwona Julianna Heczková, prezes zarządu</td>
+      <td class="col-3">inż. Piotr Andrzej Kubicius, prezes zarządu</td>
     </tr>
     <tr>
       <td class="col-1"></td><td class="col-2">Regon:</td>
@@ -85,9 +85,19 @@
     <tr>
       <td class="col-1">3.</td>
       <td colspan="2" class="col-3">
-        Dostawca zawarł z użytkownikiem dnia <span class="dotted-field">&nbsp;</span>
-        umowę nr <span class="dotted-field">&nbsp;</span>
-        o&nbsp;udostępnieniu stałego łącza do sieci internet.
+        Od 25.05.2018r. obowiązuje Rozporządzenie Parlamentu Europejskiego i Rady (UE)
+        w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i
+        w sprawie swobodnego przepływu takich danych, określane jako RODO. Firma
+        SilesNet Polska Sp. z o.o. posiada dane, które zostały zebrane w wyniku
+        podpisania lub aktualizacji umowy o świadczeniu usług telekomunikacyjnych lub
+        korespondencji z naszą firmą z dniem przeprowadzenia w/w czynności.
+        <br />
+        Administrator zapewnia wszelkie środki ochrony danych osobowych w postaci
+        fizycznej, technicznej i organizacyjnej, przed przypadkowym lub umyślnym
+        zniszczeniem, utratą, zmianą lub dostępem osób trzecich, zgodnie ze wszystkimi
+        obowiązującymi przepisami. Szczegółowe informacje związane z w/w
+        Rozporządzeniem dostępne są w regulaminie na stronie internetowej
+        <b>www.silesnet.pl</b>.
       </td>
     </tr>
 
