Fix PL protocol prezes

--- a/hbs/protocol.hbs
+++ b/hbs/protocol.hbs
@@ -22,7 +22,7 @@
     </tr>
     <tr>
       <td class="col-1"></td><td class="col-2">Reprezentowany przez:</td>
-      <td class="col-3">inż. Piotr Andrzej Kubicius, prezes zarządu</td>
+      <td class="col-3">inż. Dawid Janczar, prezes zarządu</td>
     </tr>
     <tr>
       <td class="col-1"></td><td class="col-2">Regon:</td>
